--- a/style.css
+++ b/style.css
@@ -1,4 +1,95 @@
 *{
-font-family: 'Lato', sans-serif;
-font-family: 'Poppins', sans-serif;
+    font-family: 'Montserrat', sans-serif;
+    padding:0;
+    margin:0;
+    box-sizing: border-box;
 }
+
+
+/*header css start*/
+.header{
+    background-color: #1f2937;
+    color:#F9FAF8;
+    font-size: 18px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 8px;
+}
+ul{
+    display: flex;
+    gap: 18px;
+    justify-content: flex-end;
+    list-style: none;
+    margin:0px;
+    padding:8px
+    
+}
+/*header css end*//*header css end*//*header css end*/
+
+
+a{
+    text-decoration: none;
+    color:#F9FAF8;
+}
+
+
+.hero{
+    wdith:100%;
+    height:100%;
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: center;
+    background-color: #1f2937;
+    color: #F9FAF8;
+    width:100%;
+    height: 80vh;
+}
+.left-hero{
+    width:50%;
+    height:100%;
+    max-width:1200px;
+    padding-left: 10%; 
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    flex-shrimk: 1;
+    
+}
+.hero .left-hero h1{
+    font-weight: 900 ;
+    font-size: 48px;
+    margin-bottom: 1rem;
+}
+.hero .left-hero text{
+    font-size: 18px;
+    margin-bottom: 1rem;
+}
+button{
+    background-color: #3882F6 ;
+    font-size: 16px;
+    padding:12px 28px;
+    border-radius: 8px;
+    border-color: #3882F6;
+    color: #F9FAF8;
+    transition-duration: 0.4s;
+}
+button:hover {
+    background-color: #F9FAF8;
+    color: #3882F6;
+}
+.right-hero{
+    width:50%;
+    height:100%;
+    max-width:1200px;
+    padding-right: 10%; 
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-content: flex-end;
+}
+.babypic{
+    position: absolute;
+    right: 10%
+}
+/* header css end*//*header css end*//*header css end*/
