--- a/style.css
+++ b/style.css
@@ -4,7 +4,10 @@
     margin:0;
     box-sizing: border-box;
 }
-
+body{
+    width:100%;
+    height:100%;
+}
 
 /*header css start*/
 .header{
@@ -15,16 +18,18 @@
     align-items: center;
     justify-content: space-between;
     padding: 8px;
+    width:100%;
+    padding-left: 10%;
+    padding-right:10%;
 }
 ul{
     display: flex;
     gap: 18px;
     justify-content: flex-end;
     list-style: none;
-    margin:0px;
-    padding:8px
-    
+    margin:0px;    
 }
+
 /*header css end*//*header css end*//*header css end*/
 
 
@@ -35,14 +40,13 @@ a{
 
 
 .hero{
-    wdith:100%;
+    width:100%;
     height:100%;
     display: flex;
     flex-wrap: nowrap;
     justify-content: center;
     background-color: #1f2937;
     color: #F9FAF8;
-    width:100%;
     height: 80vh;
 }
 .left-hero{
@@ -93,3 +97,32 @@ button:hover {
     right: 10%
 }
 /* header css end*//*header css end*//*header css end*/
+
+.info{
+    padding-left:10%;
+    padding-right:10%;
+    text-align: center;
+}
+.title{
+    font:36px;
+    font-weight: 600;
+    text-align: center;
+    padding-top: 5rem;
+    padding-bottom: 3rem;
+}
+
+.cards{
+    display: flex;
+    justify-content: center;
+    gap: 48px;
+}
+.text{
+    text-align: center;
+    padding-top: 12px;
+    font:18px
+}
+/* info css end*//*info css end*//*info css end*/
+
+
+    
+
